--- a/app/globals.css
+++ b/app/globals.css
@@ -3,9 +3,12 @@
 @tailwind utilities;
 
 :root {
+  --background: #f5f5f5;
+  --foreground: #444444;
   --text-primary: #232323;
   --text-emhasis: #000000;
   --highlight: #1b84ff;
+  --highlight-darker: #1669c9;
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -14,6 +17,10 @@
     --foreground: #ededed;
   }
 } */
+
+* {
+  box-sizing: border-box;
+}
 
 body {
   color: var(--text-primary);
@@ -25,7 +32,7 @@ body {
     text-wrap: balance;
   }
   .container {
-    @apply lg:max-w-[900px] xl:max-w-[1100px] 2xl:max-w-[1400px] mx-auto px-4;
+    @apply mx-auto px-4 lg:max-w-[900px] xl:max-w-[1100px] 2xl:max-w-[1400px];
   }
   .nav-list-item {
     @apply hover:text-highlight;
@@ -34,12 +41,51 @@ body {
     }
   }
   input:not([type="checkbox"], [type="radio"]) {
-    @apply border border-[#d1d5db] w-full focus:border-highlight focus-visible:border-highlight rounded-md;
+    @apply h-10 w-full rounded-md border border-[#d1d5db] p-2 focus:border-highlight focus-visible:border-highlight focus-visible:outline-none;
+  }
+
+  button {
+    &.primary-btn {
+      @apply bg-highlight text-white hover:bg-highlightDark;
+    }
+    &.secondary-btn {
+    }
+    &.outline-btn {
+      @apply flex h-10 items-center gap-4 text-nowrap rounded-md border px-4 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500;
+    }
   }
 }
 
 @layer base {
   :root {
     --radius: 0.5rem;
+  }
+  button {
+    @apply h-10 rounded-md p-2 transition-colors duration-150 focus-within:outline-highlight focus-visible:border-none focus-visible:outline-1 focus-visible:outline-highlight;
+  }
+}
+
+.blob {
+  border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+  background-image: linear-gradient(
+    30deg,
+    rgb(0, 0, 255),
+    rgb(4, 10, 196),
+    rgba(255, 0, 0, 0.7)
+  );
+}
+
+.animate-in {
+  animation: fadeIn 150ms linear forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
