--- a/app/globals.css
+++ b/app/globals.css
@@ -51,7 +51,7 @@ body {
     &.secondary-btn {
     }
     &.outline-btn {
-      @apply flex h-10 items-center gap-4 text-nowrap rounded-md border px-4 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500;
+      @apply flex items-center gap-4 text-nowrap rounded-md border px-4 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500;
     }
   }
 }
@@ -60,8 +60,8 @@ body {
   :root {
     --radius: 0.5rem;
   }
-  button {
-    @apply h-10 rounded-md p-2 transition-colors duration-150 focus-within:outline-highlight focus-visible:border-none focus-visible:outline-1 focus-visible:outline-highlight;
+  button:not(.accordion) {
+    @apply h-10 p-2 transition-colors duration-150 focus-within:outline-highlight focus-visible:border-none focus-visible:outline-1 focus-visible:outline-highlight;
   }
 }
 
@@ -69,9 +69,8 @@ body {
   border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
   background-image: linear-gradient(
     30deg,
-    rgb(0, 0, 255),
-    rgb(4, 10, 196),
-    rgba(255, 0, 0, 0.7)
+    rgba(163, 206, 255, 1),
+    rgba(243, 121, 121, 0.5)
   );
 }
 
